--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "gulp-stats": "0.0.4",
     "gulp-uglify": "^3.0.2",
     "gulp-useref": "^3.1.6",
+    "lodash": ">=4.17.11",
     "node-dir": "^0.1.17",
     "run-sequence": "^2.2.1",
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": ">=0.18.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.3.1",
     "consign": "^0.1.6",
